creat git.css;Modified index.html:h1

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta httpequiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, intial-scle=1.0">
+    <link rel="stylesheet" type="text/css" href="git.css">
     <title>使用git的教学</title>
 </head>
 
 <body>
-    hello,world
+    <h1>hello,world</h1>
 </body>
 
 </html>
